Fix overly large font on mobile

--- a/www/_sass/_base.scss
+++ b/www/_sass/_base.scss
@@ -103,26 +103,22 @@ li {
 h1 { font-weight: 400;
      margin-top: 3rem;
      margin-bottom: 1.5rem;
-     font-size: 3.5rem;
      line-height: 1; }
 
 h2 { font-style: italic;
      font-weight: 400;
      margin-top: 2.6rem;
      margin-bottom: 1rem;
-     font-size: 2.6rem;
      line-height: 1; }
 
 h3 { font-style: italic;
      font-weight: 400;
-     font-size: 2.2rem;
      margin-top: 2rem;
      margin-bottom: 0.5rem;
      line-height: 1; }
 
 h4, h5, h6 { font-style: italic;
      font-weight: 400;
-     font-size: 1.9rem;
      margin-top: 1.9rem;
      margin-bottom: 0.5rem;
      line-height: 1; }
