--- a/www/_sass/_layout.scss
+++ b/www/_sass/_layout.scss
@@ -81,7 +81,6 @@
 }
 
 .post-meta {
-    font-size: $base-font-size;
     color: $grey-color;
     font-style: italic;
     margin-bottom: $spacing-unit;
@@ -89,7 +88,6 @@
 
 .post-link {
     display: block;
-    font-size: 3.0rem;
     font-style: normal;
 }
 
